--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -81,15 +81,6 @@ content:
       image_style: vih_person_teaser
       image_link: ''
     third_party_settings: {  }
-  field_vih_user_type_id:
-    type: entity_reference_entity_view
-    weight: 8
-    region: content
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
 hidden:
   field_vih_banner: true
   field_vih_user_birthday: true
@@ -97,5 +88,6 @@ hidden:
   field_vih_user_kvalifikationer: true
   field_vih_user_paragraphs: true
   field_vih_user_title: true
+  field_vih_user_type_id: true
   langcode: true
   member_for: true
