--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+sudo: required
+dist: trusty
 language: php
+
 cache:
   bundler: true
   apt: true
@@ -7,32 +10,52 @@ cache:
     - "$HOME/.drush/cache"
     - "$HOME/.npm"
 php:
-  - 5.5
+  - 7.0
 
 env:
-  - VERSION=STABLE
-  - VERSION=HEAD
+  - VERSION=LIGHTNING TEST_TAGS=lightning PROFILE_NAME=lightning
+  - VERSION=SUBPROFILE TEST_TAGS=~search PROFILE_NAME=subprofile
 
-sudo: false
-
-mysql:
-  database: drupal
-  username: root
-  encoding: utf8
+addons:
+  apt:
+    packages:
+    # Dependencies for Chrome.
+    - libappindicator1
+    - fonts-liberation
 
 before_install:
   - phpenv config-rm xdebug.ini
   - composer self-update
   - composer --version
 
+  # Initialize xvfb (see https://docs.travis-ci.com/user/gui-and-headless-browsers)
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+
+  # Download Chrome Driver
+  - LATEST_CHROMEDRIVER=$(wget -q -O - http://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+  - wget http://chromedriver.storage.googleapis.com/$LATEST_CHROMEDRIVER/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - chmod +x chromedriver
+  - mkdir -p $HOME/.composer/vendor/bin
+  - mv -f chromedriver $HOME/.composer/vendor/bin/
+  - rm chromedriver_linux64.zip
+
+  # Update Chrome.
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome-stable_current_amd64.deb
+  - rm google-chrome-stable_current_amd64.deb
+  - google-chrome --version
+
 install:
   # Add Composer's local bin directory to the PATH so that we will be running
   # our installed versions of Drush, PHPCS, Behat, PhantomJS, etc.
-  - export PATH="$HOME/.composer/vendor/bin:$TRAVIS_BUILD_DIR/bin:$PATH"
+  - export PATH="$HOME/.composer/vendor/bin:$TRAVIS_BUILD_DIR/vendor/bin:$PATH"
 
-  # MySQL Options
-  - mysql -e 'SET GLOBAL wait_timeout = 5400;'
-  - mysql -e "SHOW VARIABLES LIKE 'wait_timeout'"
+  # Create the MySQL database and add a user for testing.
+  - mysql -u root -e "CREATE DATABASE drupal; CREATE USER 'lightning'@'localhost' IDENTIFIED BY 'lightning'; GRANT ALL ON drupal.* TO 'lightning'@'localhost';"
 
   # PHP conf tweaks
   - echo 'max_execution_time = 120' >> drupal.php.ini;
@@ -40,39 +63,65 @@ install:
   - phpenv config-add drupal.php.ini
   - phpenv rehash
 
-  # Install drush
-  - composer require drush/drush:^9.0
+  # Add Devel, which is a dependency of Lightning Dev, to the codebase
+  - composer require drupal/devel --no-update
 
   # Build the Lightning code base.
   - composer install
 
+  # Create custom sub-profile and download custom tests. We need Lightning to be
+  # installed foe the sub-profile command to run. But we will reinstall later
+  # and run the update.
+  - 'if [ $VERSION = "SUBPROFILE" ]; then
+      cd $TRAVIS_BUILD_DIR/docroot;
+      drush site-install lightning --yes --account-pass=admin --db-url=mysql://lightning:lightning@127.0.0.1/drupal;
+      cd $TRAVIS_BUILD_DIR;
+      composer require drupal/paragraphs;
+      drupal lightning:subprofile --no-interaction --name="Lightning Extender" --machine-name=subprofile --include=paragraphs --exclude=lightning_search;
+      mkdir -p ./tests/features;
+      curl -o tests/features/subprofile.feature  https://gist.githubusercontent.com/balsama/c8c03bb21f7a91a1a87d01ef185a3955/raw;
+      chmod +w ./docroot/sites/default/settings.php;
+    fi;'
+
   # Install Lightning.
-  - cd docroot
-  - drush site-install lightning --yes --account-pass=admin --db-url=mysql://root:@localhost/drupal
+  - cd $TRAVIS_BUILD_DIR/docroot
+  - drush site-install $PROFILE_NAME --yes --account-pass=admin --db-url=mysql://lightning:lightning@127.0.0.1/drupal
+  - drush config-set system.logging error_level all --yes
+
+  # Enable the dev module which will perform any manual update steps needed
+  # during database updates.
+  - drush pm-enable lightning_dev --yes
+
+  # Record the version of Lightning for the Configuration Updates.
+  - UPDATE_FROM=$(drupal lightning:version)
 
   # Update codebase to head and run db updates.
-  - if [ $VERSION = "HEAD" ]; then cd ..; fi;
-  - if [ $VERSION = "HEAD" ]; then rm -rf docroot/modules/contrib; fi;
-  - if [ $VERSION = "HEAD" ]; then composer require drupal/lightning:dev-8.x-1.x --no-update; fi;
-  - if [ $VERSION = "HEAD" ]; then composer update; fi;
-  - if [ $VERSION = "HEAD" ]; then cd docroot; fi;
-  - if [ $VERSION = "HEAD" ]; then drush updatedb -y; fi;
+  - cd $TRAVIS_BUILD_DIR
+  - composer nuke
+  - composer require acquia/lightning:dev-8.x-3.x --no-update
+  - composer update
+  - drupal cache:rebuild all
+  - drush updatedb --yes
+  - drupal update:lightning $UPDATE_FROM --no-interaction
 
-  # Copy behat file from Lightning
-  - cp ./profiles/contrib/lightning/behat.* ../
-  - sed -i -e 's/%paths.base%\/tests\/features/docroot\/profiles\/contrib\/lightning\/tests\/features/g' ../behat.yml
-  - sed -i -e 's/tests\/features\/bootstrap/docroot\/profiles\/contrib\/lightning\/tests\/features\/bootstrap/g' ../behat.yml
-  - sed -i -e 's/..\/..\//docroot/g' ../behat.local.yml
+  # Generate the behat config.
+  - cd $TRAVIS_BUILD_DIR
+  - drupal behat:init http://127.0.0.1:8080 --merge=../docroot/profiles/contrib/lightning/tests/behat.yml
+  - drupal behat:include ../docroot/profiles/contrib/lightning/tests/features --with-subcontexts=../docroot/profiles/contrib/lightning/tests/features/bootstrap --with-subcontexts=../docroot/profiles/contrib/lightning/src/LightningExtension/Context
+  - if [ $VERSION = "SUBPROFILE" ]; then drupal behat:include ../tests/features; fi;
+  - cd $TRAVIS_BUILD_DIR/docroot
 
 before_script:
   - drush runserver --default-server=builtin 8080 &>/dev/null &
-  - phantomjs --webdriver=4444 > /dev/null &
+
+  # Start Selenium and dump its ginormous log into a temporary file.
+  - jdk_switcher use oraclejdk8
+  - mkdir tmp
+  - selenium-server-standalone -port 4444 -log tmp/selenium2.log &
   - sleep 5
-  - cd ..
 
 script:
-  - bin/behat --strict
+  - behat --strict --stop-on-failure --config ./sites/default/files/behat.yml --tags=${TEST_TAGS}
 
 matrix:
   fast_finish: true
-
