--- a/docroot/themes/custom/site/package.json
+++ b/docroot/themes/custom/site/package.json
@@ -49,6 +49,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
+    "gulp-bless": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.1.0",
     "gulp-imagemin": "^4.0.0",
