--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -28,7 +28,6 @@ third_party_settings:
     group_content:
       children:
         - field_vih_heading
-        - field_subheading
         - field_vih_subheading
         - field_vih_paragraphs
       parent_name: ''
@@ -61,6 +60,7 @@ third_party_settings:
         - field_vih_class_image
         - name
         - description
+        - field_short_description
         - field_vih_class_color
         - field_vih_class_material_price
         - field_vih_class_price_addition
@@ -114,7 +114,7 @@ content:
     type: metatag_firehose
     region: content
   field_short_description:
-    weight: 22
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -135,7 +135,7 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_class_class_packages:
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -144,7 +144,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_class_color:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -163,14 +163,14 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_class_material_price:
-    weight: 8
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_class_price_addition:
-    weight: 9
+    weight: 10
     settings:
       placeholder: ''
     third_party_settings: {  }
