--- a/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_user.yml
+++ b/config/sync/field.field.paragraph.vih_teacher_class_description.field_vih_user.yml
@@ -9,7 +9,7 @@ id: paragraph.vih_teacher_class_description.field_vih_user
 field_name: field_vih_user
 entity_type: paragraph
 bundle: vih_teacher_class_description
-label: Undervisere
+label: Underviser
 description: ''
 required: false
 translatable: false
