--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -9,32 +9,16 @@ dependencies:
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - field.field.paragraph.vih_teacher_class_description.field_vih_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_user
+    - image.style.medium
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - image
-    - options
     - text
 id: paragraph.vih_teacher_class_description.default
 targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_vih_background_color:
-    weight: 3
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_image:
-    weight: 4
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_description:
     type: text_default
     weight: 2
@@ -56,8 +40,10 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: ''
+      image_style: medium
       image_link: ''
     third_party_settings: {  }
 hidden:
+  field_vih_background_color: true
+  field_vih_background_image: true
   field_vih_user: true
